# fp-lab3

./: .gitignore  README.md  dune-project  fp_lab3.opam
.github/workflows/: flow.yaml
lib/cli/: dune  input.ml  loop.ml  output.ml
lib/interpolation/: config.ml  dune  interpolation.ml  lagrange.ml  lagrange.mli  linear.ml  linear.mli  types.ml  utils.ml
lib/io/: dune  io.ml
test/: dune  test_property.ml
